--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,7 +440,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius:50px;
   background-color: #00E3BE;
   font-size:1.5rem;
-  color:#182124;
+  color:#cdd9dd;
   font-weight: 600;
 }
 
