--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0;
   height:64px;
-  width:120px;
+  width:115px;
 }
 #header.header-transparent {
   background: transparent;
@@ -633,7 +633,7 @@ section {
 }
 
 .card[data-radius="none"] {
-    border-radius: 0px;
+    border-radius: 20px;
 }
 .card {
     border-radius: 8px;
@@ -647,12 +647,22 @@ section {
 
 
 .card[data-background="image"] .title, .card[data-background="image"] .stats, .card[data-background="image"] .category, .card[data-background="image"] .description, .card[data-background="image"] .content, .card[data-background="image"] .card-footer, .card[data-background="image"] small, .card[data-background="image"] .content a, .card[data-background="color"] .title, .card[data-background="color"] .stats, .card[data-background="color"] .category, .card[data-background="color"] .description, .card[data-background="color"] .content, .card[data-background="color"] .card-footer, .card[data-background="color"] small, .card[data-background="color"] .content a {
-    color: #FFFFFF;
+    color: #000;
 }
 .card.card-just-text .content {
-    padding: 50px 65px;
+    display:flex;
+    padding: 50px 99px;
     text-align: center;
+    align-items:center;
 }
+
+@media all and (min-width:455px) and (max-width:576px){
+  .card.card-just-text .content {
+    padding-left:159px;
+  }
+
+}
+
 .card .content {
     padding: 20px 20px 10px 20px;
 }
@@ -708,7 +718,8 @@ a:hover, a:focus {
 }
 
 .card[data-color="green"] {
-    background: #085959;
+    background:#00E3BE;
+    ;
 }
 .card[data-color="green"] .description {
     color: #60773d;
@@ -762,15 +773,4 @@ a:hover, a:focus {
   align-items: center;
   justify-content: center;
 }
-}
-
-@media all and (min-width: 992px) {
- 
-  /* .flex_g1{
-   display:flex;
- }
-  .flex_g1> div{
-    flex: 1 1 33%;
-  } */
-
 }
