changes in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -656,13 +656,6 @@ section {
     align-items:center;
 }
 
-@media all and (min-width:455px) and (max-width:576px){
-  .card.card-just-text .content {
-    padding-left:159px;
-  }
-
-}
-
 .card .content {
     padding: 20px 20px 10px 20px;
 }
@@ -780,7 +773,7 @@ a:hover, a:focus {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: ;
+  background:linear-gradient(180deg, rgba(4,161,135,1) 0%, rgba(3,74,82,1) 41%, rgba(29,28,46,1) 100%);
   color: #fff;
   font-size: 14px;
   text-align: center;
@@ -795,6 +788,14 @@ a:hover, a:focus {
   padding: 0;
   margin: 0 0 15px 0;
 }
+
+.flex{
+  display: flex;
+  gap:2rem;
+  justify-content: center;
+
+}
+
 #footer p {
   font-size: 15;
   font-style: italic;
