--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,6 +473,20 @@ h1, h2, h3, h4, h5, h6 {
   opacity: 0.9;
 }
 
+.register{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  background-color:#004944;
+  height:125px;
+  width:40%;
+  margin:0 auto;
+  border-radius: 30px;
+  color:#fff;
+  font-size:3rem;
+
+}
+
 #hero .btn-get-started {
   font-family: "Poppins", sans-serif;
   text-transform: uppercase;
