--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -618,10 +618,15 @@ section {
 
 
 
+/*--------------------------------------------------------------
+# cards
+--------------------------------------------------------------*/
+
 .row{
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
+
 
 .card-big-shadow {
     max-width: 320px;
@@ -650,19 +655,9 @@ section {
     color: #000;
 }
 .card.card-just-text .content {
-    display:flex;
-    padding: 50px 99px;
+    padding: 50px 65px;
     text-align: center;
-    align-items:center;
 }
-
-@media all and (min-width:455px) and (max-width:576px){
-  .card.card-just-text .content {
-    padding-left:159px;
-  }
-
-}
-
 .card .content {
     padding: 20px 20px 10px 20px;
 }
@@ -679,10 +674,10 @@ section {
     background-position: center bottom;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    bottom: -12%;
+    bottom: 0;
     content: "";
     display: block;
-    left: -12%;
+    left: 0;
     position: absolute;
     right: 0;
     top: 0;
@@ -710,16 +705,11 @@ a:hover, a:focus {
 }
 
 /*======== COLORS ===========*/
-.card[data-color="blue"] {
-    background: #b8d8d8;
-}
-.card[data-color="blue"] .description {
-    color: #506568;
-}
+
 
 .card[data-color="green"] {
     background:#00E3BE;
-    ;
+    
 }
 .card[data-color="green"] .description {
     color: #60773d;
@@ -728,53 +718,29 @@ a:hover, a:focus {
     color: #92ac56;
 }
 
-.card[data-color="yellow"] {
-    background: #ffe28c;
-}
-.card[data-color="yellow"] .description {
-    color: #b25825;
-}
-.card[data-color="yellow"] .category {
-    color: #d88715;
-}
-
-.card[data-color="brown"] {
-    background: #d6c1ab;
-}
-.card[data-color="brown"] .description {
-    color: #75442e;
-}
-.card[data-color="brown"] .category {
-    color: #a47e65;
-}
-
-.card[data-color="purple"] {
-    background: #baa9ba;
-}
-.card[data-color="purple"] .description {
-    color: #3a283d;
-}
-.card[data-color="purple"] .category {
-    color: #5a283d;
-}
-
-.card[data-color="orange"] {
-    background: #ff8f5e;
-}
-.card[data-color="orange"] .description {
-    color: #772510;
-}
-.card[data-color="orange"] .category {
-    color: #e95e37;
-}
-
-@media (max-width: 575px) and (min-width: 380px) {
- .row{
+@media (max-width: 575px) and (min-width: 370px) {
+ .container .row{
+  
   align-items: center;
   justify-content: center;
+
 }
 }
 
+@media all and (min-width: 576px) {
+ .row 
+ {
+  font-size: 15px;
+}
+@media (max-width: 990px) and (min-width: 720px) {
+ .row 
+ {
+
+  font-size: 14px;
+}
+
+
+}
 
 /*--------------------------------------------------------------
 # Footer
