--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,7 +843,7 @@ a:hover, a:focus {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #00E3BE;
+  background: #07394a;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
