--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,14 @@
   font-style: normal;
   font-weight: normal;
   }
+
+  @font-face {
+    font-family:'register';
+    src: url('./Fonts/Roboto-Medium.ttf');
+    font-style: normal;
+    font-weight: medium;
+    }
+  
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -447,9 +455,9 @@ h1, h2, h3, h4, h5, h6 {
 .abt{
   color:#fff;
   text-align:center;
-  font-size:2rem;
+  font-size:3rem;
   font-weight: 700;
-  padding-bottom:2rem
+  padding-bottom:4rem
 }
 
 
@@ -461,6 +469,30 @@ h1, h2, h3, h4, h5, h6 {
   font-weight:500;
   color:rgb(212, 212, 212);
   margin:0 auto;
+}
+
+@media all and (min-width:1000px){
+  
+  .flex-align{
+    display:flex;
+    gap:2rem;
+  }
+  
+  .flex-align>*{
+    flex-grow:1;
+    padding:0;
+    margin:0;
+
+  }
+
+  .flex-align p{
+    margin-left:4rem;
+    text-align:left;
+  }
+
+  .flex-align img{
+    transform:translateY(-3.5rem);
+  }
 }
 
 .abt-img{
@@ -477,14 +509,32 @@ h1, h2, h3, h4, h5, h6 {
   display:flex;
   justify-content:center;
   align-items:center;
-  background-color:#004944;
-  height:125px;
-  width:40%;
   margin:0 auto;
+  margin-top: 6rem;
+  border:2px solid #00E3BE;
+  background-color:#021e27;
+  padding:0.9rem 2rem;
+  width:40%;
   border-radius: 30px;
-  color:#fff;
-  font-size:3rem;
+  color:#00E3BE;
+  font-size:6vmin;
+  font-family:'register';
+  transition:all .25s ease-in-out;
 
+}
+
+@media all and (max-width:840px){
+  .register{
+    width:80%;
+    font-size:5vmax;
+  }
+}
+
+.register:hover,.register:focus{
+  border:2px solid rgb(41, 41, 41);
+  cursor:pointer;
+  background-color: #00E3BE;
+  color:#000;
 }
 
 #hero .btn-get-started {
