--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -801,6 +801,31 @@ a:hover, a:focus {
   font-size: 15px;
 }
 }
+@media (max-width: 575px) and (min-width: 370px) {
+.row {
+   position: relative;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+}
+
+.container{
+  margin: 0px auto;
+
+  padding:0.9rem 2rem;
+}
+.card{
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
+  margin: 0px auto;
+  padding:0.9rem 2rem;
+  
+}
+}
 @media (max-width: 990px) and (min-width: 720px) {
  .row 
  {
