--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,12 @@
   font-weight: normal;
   }
 
-  @font-face {
-    font-family:'register';
+@font-face {
+    font-family:register;
     src: url('./Fonts/Roboto-Medium.ttf');
     font-style: normal;
     font-weight: medium;
-    }
-  
+    }        
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -431,16 +430,60 @@ h1, h2, h3, h4, h5, h6 {
   font-size:4.7rem;
 }
 
-.countdown{
+.extra{
+  display:none;
+}
+
+@media all and (max-width:360px){
+  .trisk{
+    font-size: 14vmin;
+  }
+  
+  .siz{
+    font-size:25vmin;
+  }
+}
+
+@media all and (min-width:1200px){
+  .trisk{
+    font-size:5vmax;
+  }
+
+  .siz{
+    font-size:6vmax;
+  }
+}
+
+@media all and (min-width:1650px){
+  .extra{
+    display:block;
+  }
+  .trisk{
+    font-size:7vmax;
+  }
+  .siz{
+    font-size:8vmax;
+  }
+}
+
+@media all and (min-width:1900px){
+  .trisk{
+    font-size:8rem;
+  }
+  .siz{
+    font-size:10rem;
+  }
+}
+/* .countdown{
   display: flex;
   padding-bottom: 3rem;
   gap:2rem;
   font-size:1rem;
   color:rgb(190, 187, 187);
 
-}
+} */
 
-.time{
+/* .time{
   position:relative;
   content:'';
   width:5rem;
@@ -450,16 +493,20 @@ h1, h2, h3, h4, h5, h6 {
   font-size:1.5rem;
   color:#cdd9dd;
   font-weight: 600;
-}
+} */
 
 .abt{
   color:#fff;
   text-align:center;
   font-size:3rem;
   font-weight: 700;
-  padding-bottom:4rem
+  padding-bottom:4rem;
 }
 
+.flex-align{
+  max-width:1400px;
+  margin:0 auto;
+}
 
 .about{
   max-width:720px;
@@ -471,6 +518,17 @@ h1, h2, h3, h4, h5, h6 {
   margin:0 auto;
 }
 
+
+.abt-img{
+  display:flex;
+  align-items:center;
+  max-width :400px;
+  width:100%;
+  margin:  0 auto; 
+  padding-left:1.5rem;
+  opacity: 0.8;
+}
+
 @media all and (min-width:1000px){
   
   .flex-align{
@@ -480,61 +538,31 @@ h1, h2, h3, h4, h5, h6 {
   
   .flex-align>*{
     flex-grow:1;
-    padding:0;
-    margin:0;
-
+    flex-shrink:1;
   }
 
-  .flex-align p{
-    margin-right:4rem;
-    text-align:left;
+  .abt-img {
+    padding-bottom:2rem;
+    margin :0 auto;
   }
 
-  .flex-align img{
-    transform:translateY(-3.5rem);
-  }
-}
-
-.abt-img{
-  display:flex;
-  align-items:center;
-  max-width :450px;
-  width:369px;
-  height:auto;
-  margin: 4rem auto 0 auto;
-  opacity: 0.9;
-}
-
-.register{
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  margin:0 auto;
-  margin-top: 6rem;
-  border:2px solid rgb(41, 41, 41);
-  background-color: #00E3BE;
-  padding:0.9rem 2rem;
-  width:40%;
-  border-radius: 30px;
-  font-size:6vmin;
-  font-family:'register';
-  transition:all .25s ease-in-out;
-  color:#000;
-}
-
-@media all and (max-width:992px){
-  .register{
-    width:80%;
-    font-size:5vmax;
+  .about{
+    padding-left: 4rem;
+    padding-right: 2rem;
   }
 }
 
-.register:hover,.register:focus{
-  cursor:pointer;
-  border:2px solid #00E3BE;
-  background-color:#021e27;
-  color:#00E3BE;
+@media all and (max-width:1000px){
+  .abt-img {
+  padding-left:0;
+  padding-bottom:3.5rem ;
+  }
+
+  .abt{
+    padding-bottom:2.5rem;
+  }
 }
+
 
 #hero .btn-get-started {
   font-family: "Poppins", sans-serif;
@@ -554,6 +582,150 @@ h1, h2, h3, h4, h5, h6 {
   background: #2dc997;
   border: 2px solid #2dc997;
 }
+
+/*--------------------------------------------------------------
+# Register button
+--------------------------------------------------------------*/
+.bubbly-button {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+  font-size: 2.9rem;
+  font-family: 'register';
+  letter-spacing:3px;
+  padding: 0.5em 3em;
+  margin-top: 100px;
+  margin-bottom: 60px;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #00e3be;
+  color: #000;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+  box-shadow: 0 2px 25px rgba(0, 227, 190, 0.5);
+  border-radius: 20px;
+}
+.bubbly-button:focus {
+  outline: 0;
+}
+.bubbly-button:before, .bubbly-button:after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 140%;
+  height: 100%;
+  left: -20%;
+  z-index: -1000;
+  transition: all ease-in-out 0.5s;
+  background-repeat: no-repeat;
+}
+.bubbly-button:before {
+  display: none;
+  top: -75%;
+  background-image: radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, transparent 20%, #00e3be 20%, transparent 30%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, transparent 10%, #00e3be 15%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%);
+  background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+}
+.bubbly-button:after {
+  display: none;
+  bottom: -75%;
+  background-image: radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, transparent 10%, #00e3be 15%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%), radial-gradient(circle, #00e3be 20%, transparent 20%);
+  background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+}
+.bubbly-button:active {
+  transform: scale(0.9);
+  background-color: #00caa9;
+  box-shadow: 0 2px 25px rgba(0, 227, 190, 1);
+}
+.bubbly-button.animate:before {
+  display: block;
+  animation: topBubbles ease-in-out 0.75s forwards;
+}
+.bubbly-button.animate:after {
+  display: block;
+  animation: bottomBubbles ease-in-out 0.75s forwards;
+}
+@keyframes topBubbles {
+  0% {
+    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+ }
+  50% {
+    background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+ }
+  100% {
+    background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+ }
+}
+@keyframes bottomBubbles {
+  0% {
+    background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+ }
+  50% {
+    background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+ }
+  100% {
+    background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+ }
+}
+
+@media all and (max-width:768px){
+  .bubbly-button{
+    padding: 1rem 4rem;
+    font-size:2rem;
+
+  }
+  
+}
+
+@media all and (max-width:370px){
+  .bubbly-button{
+    width: 100%;
+    margin:0 auto;
+  }
+  
+}
+
+@media all and (max-width:455px){
+  .bubbly-button{
+    padding: 1rem 2.5rem;
+    font-size:1.3rem;
+    margin:0;
+  }
+  
+}
+
+@media all and (max-width:288px){
+  .bubbly-button{
+    padding: 1rem 1rem;
+    font-size:3vmax;
+
+  }
+  
+}
+
+/*--------------------------------------------------------------
+# Card Alignment Fix
+--------------------------------------------------------------*/
+@media (min-width: 768px){
+  .col-md-4 {
+    width: auto;
+  }
+}
+
+  @media (min-width: 576px){
+  .col-sm-6 {
+    width:auto;
+  }
+
+}
+
+.row>*{
+  width: auto !important;
+}
+
 
 /*--------------------------------------------------------------
 # Sections General
@@ -797,9 +969,8 @@ a:hover, a:focus {
  .row 
  {
   font-size: 15px;
- }
 }
-
+}
 @media (max-width: 575px) and (min-width: 370px) {
 .row {
    position: relative;
@@ -906,6 +1077,10 @@ a:hover, a:focus {
 
 }
 
+#transformin:hover,#transformin:focus{
+  transform: scale(1.3);
+}
+
 #footer p {
   font-size: 15;
   font-style: italic;
@@ -948,3 +1123,8 @@ a:hover, a:focus {
 #footer .credits a:hover {
   color: #009961;
 }
+
+
+
+
+
